# pyinstaller-hypercorn-flask

./: .pre-commit-config.yaml  README.md  foobar.spec  pyproject.toml
foobar/: app.py  commands.py  run.py
